--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <script src="main.js"></script>
+    <title>Pig</title>
+    <script defer src="/mainDom.js"></script>
   </head>
   <body>
     <h1>Hello World!</h1>
     <hr/>
     <div id="display-element"></div>
-    <form>
+    <form onsubmit="submitButton(event)">
       <input id="user-input" type="text">
       <!-- How do you get this input sent to the pigLatin() function? -->
-      <button onclick="pigLatin()">Translate</button>
+      <button onclick="pigLatin(event)">Translate</button>
     </form>  
     <hr/>
   </body>
