--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Pig</title>
+    <meta charset="utf-8" />
+    <title>Pig Latin Project</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cute+Font&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/style.css" />
     <script defer src="/mainDom.js"></script>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <hr/>
-    <div id="display-element"></div>
-    <form onsubmit="submitButton(event)">
-      <input id="user-input" type="text">
-      <!-- How do you get this input sent to the pigLatin() function? -->
-      <button onclick="pigLatin(event)">Translate</button>
-    </form>  
-    <hr/>
+    <section>
+      <h1>pig latin <br> translator</h1>
+      <div id="display-element"></div>
+      <form onsubmit="submitButton(event)">
+        <input id="user-input" type="text" placeholder=" enter word here" />
+        <!-- How do you get this input sent to the pigLatin() function? -->
+        <button id="btn" onclick="pigLatin(event)">Translate</button>
+      </form>
+    </section>
   </body>
 </html>
