polished the rendering on css file. added classes to index and fixed some bugs on mainDom

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
   <body>
     <section>
       <h1>pig latin <br> translator</h1>
-      <div id="display-element"></div>
+      <!-- <div id="display-element"></div> -->
       <form onsubmit="submitButton(event)">
         <input id="user-input" type="text" placeholder=" enter word here" />
         <!-- How do you get this input sent to the pigLatin() function? -->
         <button id="btn" onclick="pigLatin(event)">Translate</button>
+        <div id="display-element"></div>
       </form>
     </section>
   </body>
