--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
       href="https://fonts.googleapis.com/css2?family=Cute+Font&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <script defer src="/mainDom.js"></script>
   </head>
   <body>
     <section>
-      <h1>pig latin <br> translator</h1>
+      <h1>
+        pig latin <br />
+        translator
+      </h1>
       <!-- <div id="display-element"></div> -->
       <form onsubmit="submitButton(event)">
         <input id="user-input" type="text" placeholder=" enter word here" />
