modified css file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script defer src="/mainDom.js"></script>
   </head>
   <body>
-    <section>
+    <section class="main">
       <h1>
         pig latin <br />
         translator
